# LOTUSim-generic-scenario

./: .gitignore  .gitmodules  README.md  install_core_and_generic_scenario.sh
deployment/: .gitignore  README.md  build_wheels.sh  my_config.json  setup_ros_network.sh
deployment/src/example_agent/: package.xml  setup.cfg  setup.py
deployment/src/example_agent/example_agent/: my_agent.py
deployment/src/example_agent/resource/: example_agent
doc/: ARCHITECTURE.md  MISSIONS.md  WRITE_SCENARIO.md
lotusim_unity_executables/lotusimenergy_linux/LOTUSimEnergy_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  boot.config  globalgamemanagers  level0  level1  sharedassets0.assets  sharedassets1.assets
lotusim_unity_executables/lotusimenergy_linux/LOTUSimEnergy_Data/StreamingAssets/aa/: catalog.json  settings.json
lotusim_unity_executables/lotusimenergy_linux/LOTUSimEnergy_Data/StreamingAssets/aa/AddressablesLink/: link.xml
lotusim_unity_executables/lotusimenergy_windows/LOTUSimEnergy_Data/: ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  level0  level1  sharedassets0.assets  sharedassets1.assets
lotusim_unity_executables/lotusimenergy_windows/LOTUSimEnergy_Data/StreamingAssets/aa/: catalog.json
lotusim_unity_executables/silentStorm_linux/silentStorm_BurstDebugInformation_DoNotShip/Data/Plugins/: lib_burst_generated.txt
lotusim_unity_executables/silentStorm_linux/silentStorm_Data/: app.info  boot.config  globalgamemanagers  level0  level1  resources.assets
lotusim_unity_executables/silentStorm_linux/silentStorm_Data/StreamingAssets/aa/: catalog.json
lotusim_unity_executables/silentStorm_windows/silentStorm_Data/: RuntimeInitializeOnLoads.json  boot.config  globalgamemanagers  level0  level1  resources.assets
lotusim_unity_executables/silentStorm_windows/silentStorm_Data/StreamingAssets/aa/: catalog.json  settings.json
src/external_packages/bluerov2_heavy_inspection/: package.xml  setup.cfg  setup.py
src/external_packages/bluerov2_heavy_inspection/bluerov2_heavy_inspection/: __init__.py  bluerov2_heavy_inspection.py
src/external_packages/custom_task_demo/: package.xml  setup.cfg  setup.py
src/external_packages/custom_task_demo/custom_task_demo/: __init__.py  agent.py
src/external_packages/lrauv_propeller/: setup.py
src/external_packages/wamv_inspection/: package.xml  setup.cfg  setup.py
src/external_packages/wamv_inspection/wamv_inspection/: __init__.py  wamv_inspection.py
src/external_packages/x500_inspection/: package.xml  setup.cfg  setup.py
src/external_packages/x500_inspection/x500_inspection/: __init__.py  x500_inspection.py
src/lotusim_client/: package.xml  setup.py
src/lotusim_client/lotusim_client/: run_agent.py
src/lotusim_sdk/: package.xml  setup.py
src/lotusim_sdk/lotusim_sdk/: __init__.py  spawn_utils.py  trajectory_providers.py
src/lotusim_sdk/lotusim_sdk/agents/: __init__.py  agent.py  fixed_entity.py  physical_entity.py
src/lotusim_sdk/lotusim_sdk/agents/entity/: __init__.py
src/lotusim_sdk/lotusim_sdk/agents/entity/physical/: __init__.py  bluerov2_heavy.py  commando.py  dtmb_hull.py  fremm.py  lrauv.py  mine.py  pha.py  wamv.py  x500.py
src/lotusim_sdk/lotusim_sdk/agents/environment/: __init__.py
src/lotusim_sdk/lotusim_sdk/agents/environment/wind/: __init__.py  gaussian.py  jensen.py  wake_model_base.py  wind.py
src/lotusim_sdk/lotusim_sdk/bt/: __init__.py  blackboard.py  builder.py  composites.py  node.py  status.py
src/lotusim_sdk/lotusim_sdk/tasks/: __init__.py  base.py  check_battery_state.py  fault_inspection.py  waypoint_follower.py
src/lotusim_sdk/lotusim_sdk/tasks/fault_inspection_assets/: __init__.py  yolo_server_corrosion_crack.py
src/simulation_run/: package.xml  setup.py
src/simulation_run/config/: custom_task_demo.json  demo_facet.json  empty.json  inspection_and_battery.json  sequence_and_parallel.json  waypoint_solo.json  waypoint_solo_file.json  waypoint_windturbine1.json  waypoint_windturbine10.json  waypoint_windturbine14.json  waypoint_windturbine7.json  waypoint_windturbine8.json  wind_only.json
src/simulation_run/executable/: scenario_launch.sh
src/simulation_run/simulation_run/: __init__.py  agents_manager.py  configs.py  main.py  ros_manager.py  simulation_runner.py  utils.py
src/simulation_run/simulation_run/dynamic_spawn/: __init__.py  despawn_agent.py  list_agents.py  service.py  spawn_agent.py
(+1 files in other folders)
