<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lotusim_client</name>
  <version>0.1.0</version>
  <description>LOTUSim client tools — run and manage agents from any ROS 2 machine</description>
  <maintainer email="lotusim@naval-group.com">Naval Group</maintainer>
  <license>EPL-2.0</license>

  <depend>rclpy</depend>
  <depend>lotusim_sdk</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
