<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_agent</name>
  <version>0.1.0</version>
  <description>Example LOTUSim remote agent package</description>
  <maintainer email="test@example.com">Main Tainer</maintainer>
  <license>EPL-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lotusim_sdk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
