<?xml version="1.0"?>
<package format="3">
  <name>wamv_inspection</name>
  <version>0.0.1</version>
  <description>Agent externe WamvInspection avec détection YOLO corrosion/fissures</description>
  <maintainer email="jgrosset10@gmail.com">juliette</maintainer>
  <author email="jgrosset10@gmail.com">juliette</author>
  <license>EPL-2.0</license>

  <depend>wamv</depend>
  <depend>simulation_run</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
