<?xml version="1.0"?>
<package format="3">
  <name>x500_inspection</name>
  <version>0.0.1</version>
  <description>Agent externe X500Inspection avec détection YOLO corrosion/fissures</description>
  <maintainer email="jgrosset10@gmail.com">juliette</maintainer>
  <author email="jgrosset10@gmail.com">juliette</author>
  <license>EPL-2.0</license>

  <depend>x500</depend>
  <depend>simulation_run</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
